Added update users functionnality to database + other minor fixes

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "validator": "^13.7.0"
   }
 }
