Added profile picture functionality in backend and added profile editing in frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "nodeman": "^1.1.2",
