--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "noisejs": "^2.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.2.1",
     "sass": "^1.45.1",
     "web-vitals": "^2.1.0"
   },
